--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.4.2",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
     "@vitejs/plugin-react-refresh": "^1.3.0",
+    "dotenv": "^16.0.0",
+    "ethers": "^5.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "vite": "^2.3.8",
-    "ethers": "^5.4.4"
+    "vite": "^2.3.8"
   }
 }
